--- a/config/locales/en.activerecord.yml
+++ b/config/locales/en.activerecord.yml
@@ -6,4 +6,5 @@ en:
           attributes:
             password:
               cannot_sign_in: is wrong
-
+            email:
+              user_does_not_exist: not found
